--- a/custom-bf_cope_list.html
+++ b/custom-bf_cope_list.html
@@ -845,7 +845,7 @@ border-radius: 0 !important;
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
-<script src="index.iife.js"></script>
+<script src="https://unpkg.com/@solana/web3.js@0.92.0/lib/index.iife.js"></script>
 
 <script>
 const url = 'https://api.mainnet-beta.solana.com'
@@ -902,7 +902,7 @@ document.getElementById('balance').innerHTML = displayBal
                 </button>
 
 
-                <div style='text-align:center;'> If Balance > 40000000000 (0.04 SOL) Lamports Example Report will be available</div>
+                <div style='text-align:center;'> If Balance >= 10000000000 Lamports (0.01 SOL)  Example Report will be available</div>
                 <div class="container">
                     <div  class="box stack-top" style="background: blue;"></div>
                     <script>
@@ -912,7 +912,7 @@ document.getElementById('balance').innerHTML = displayBal
                         var result = document.getElementById("balance").innerHTML;
                         var res = result.replace(/\D/g, "");
                         console.log(res)
-                        if (res > 40000000000){
+                        if (res > 10000000000){
                           $('.box').remove();
                         }
                       }
@@ -938,7 +938,7 @@ document.getElementById('balance').innerHTML = displayBal
 																<p class="project-p-initial">This was a very bad call near a local bottom. It demonstrated FOMO chasing red candles. It's a bull market, shorting near local bottoms is not a good idea. Hopefully you will recover from this and learn to not short too low next time in a bull market</p>
 															</div>
 															<div class="div-block-18">
-																<a style="background-color:black;color:white" href="/earn/project/nervos-network" class="btn_earn_initial w-inline-block">
+																<a style="background-color:black;color:white" href="" class="btn_earn_initial w-inline-block">
 																	<div class="text-block-10">Go To </div>
 																	<div class="text-block-4">Chart</div>
 																</a>
@@ -964,7 +964,7 @@ document.getElementById('balance').innerHTML = displayBal
   																<p class="project-p-initial">This was a very good call. It demonstrated good fundamental understanding of the SUSHI project and good possible low buying opportunity which ended up being valuable for 1000s of traders.</p>
   															</div>
   															<div class="div-block-18">
-  																<a style="background-color:black;color:white" href="/earn/project/nervos-network" class="btn_earn_initial w-inline-block">
+  																<a style="background-color:black;color:white" href="" class="btn_earn_initial w-inline-block">
   																	<div class="text-block-10">Go To </div>
   																	<div class="text-block-4">Chart</div>
   																</a>
@@ -991,7 +991,7 @@ document.getElementById('balance').innerHTML = displayBal
     																<p class="project-p-initial">This was a very good call, demonstrated a good understanding of the project fundamentals. GRT went up over 5x since the time of this call, and with many fundamental impactful events occuring for The Graph Protocol it was a well timed call.</p>
     															</div>
     															<div class="div-block-18">
-    																<a style="background-color:black;color:white" href="/earn/project/nervos-network" class="btn_earn_initial w-inline-block">
+    																<a style="background-color:black;color:white" href="" class="btn_earn_initial w-inline-block">
     																	<div class="text-block-10">Go To </div>
     																	<div class="text-block-4">Chart</div>
     																</a>
